--- a/front/KycManager/src/app/components/login/login.component.html
+++ b/front/KycManager/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
-<section class="relative min-h-screen flex items-center justify-center overflow-hidden bg-gradient-to-b from-blue-900 via-gray-900 to-blue-500">
+<section class="relative min-h-screen flex items-center justify-center overflow-hidden bg-gradient-to-b from-green-800 via-green-950 to-gray-500">
   <!-- Top-right logo -->
-<img src="/assets/Sahamlogo.png" alt="Saham Logo"
+<img src="/assets/Sahamlogowhite.png" alt="Saham Logo"
      class="absolute top-5 right-5 h-12 w-auto z-20" />
   <!-- Background SVG Wave -->
   <svg class="absolute bottom-0 left-0 w-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -64,7 +64,7 @@
         <!-- Submit Button -->
         <div>
           <button type="submit"
-            class="w-full flex justify-center bg-blue-800 hover:bg-blue-700 text-white p-3 rounded-lg tracking-wide font-semibold transition duration-500">
+            class=" w-full flex justify-center bg-orange-600 hover:bg-red-900 text-white p-3 rounded-lg tracking-wide font-semibold transition duration-500">
             Sign in
           </button>
         </div>
