--- a/front/KycManager/src/app/components/nav-bar/nav-bar.component.html
+++ b/front/KycManager/src/app/components/nav-bar/nav-bar.component.html
@@ -13,12 +13,13 @@
         (click)="navigateToRealms()"
         aria-label="Navigate to Realms"
         class="flex items-center gap-2 rounded-md
-               px-3 py-2 text-blue-700 font-semibold
+               px-3 py-2 text-green-700 font-semibold
                transition-transform duration-300
                hover:brightness-110 hover:scale-105  "
       >
-        <mat-icon class="text-lg leading-none ">public</mat-icon>
         <span>Realms</span>
+        <mat-icon class="text-lg leading-none text-green-500 hover:text-green-700 transition-colors duration-300"
+          aria-hidden="true">public</mat-icon>
       </button>
     </div>
 
