--- a/front/KycManager/src/styles/custom-theme.scss
+++ b/front/KycManager/src/styles/custom-theme.scss
@@ -11,14 +11,14 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   /* Optional CSS variable override */
-  --primary-color: #1e40af; /* Tailwind blue-900 */
+  --primary-color: #4e4e4e; /* Tailwind blue-900 */
 }
 
 // Define your primary blue palette based on Tailwind blues
 $mat-primary: (
-  main: #3b82f6,   // Tailwind blue-500
+  main: #ffffff,   // Tailwind blue-500
   lighter: #60a5fa, // Tailwind blue-400
-  darker: #1e40af,  // Tailwind blue-900
+  darker: #ffffff,  // Tailwind blue-900
   200: #93c5fd,    // Tailwind blue-300
   // For slide toggle contrast colors
   contrast: (
